--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ links:
 
 t.me.slittertool <----- TOOLS
 t.me/govzz <---------- BUY GOVS
+Made by Reauth, Exorcist, And Heal
 </pre>
 </body>
 </html>
