--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@ links:
 t.me.slittertool <----- TOOLS
 t.me/govzz <---------- BUY GOVS
 Made by Reauth, Exorcist, And Heal
+
+------------- Prices ------------------
+IN: $10-15 USD
+AO: $15-25 USD or Crypto
+
+------------- 
+
+Govzz Was Founded In 2025
 </pre>
 </body>
 </html>
