--- a/index.html
+++ b/index.html
@@ -1,32 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Govzz</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Green and Black Box</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
-            background-color: #333333; /* A dark grey color */
-            color: #FFFFFF; /* White text */
+            font-family: 'Courier New', monospace;
+            background-color: #000000; /* Solid black background */
         }
     </style>
 </head>
-<body>
-<pre>
---------------- govzz -------------------
-Government email selling serice
-
-links:
-
-t.me.slittertool <----- TOOLS
-t.me/govzz <---------- BUY GOVS
-Made by Reauth, Exorcist, And Heal
-
-------------- Prices ------------------
-IN: $10-15 USD
-AO: $15-25 USD or Crypto
-
-------------- 
-
-Govzz Was Founded In 2025
+<body class="flex items-center justify-center min-h-screen p-4">
+    <div class="bg-gray-950 text-green-500 font-mono text-xl p-8 rounded-2xl border-4 border-green-500 shadow-2xl max-w-lg w-full overflow-auto">
+        <pre class="whitespace-pre-wrap break-words">
+this is a GAG selling/buying/stock Server. Join It!
+https://discord.gg/Jrx9wvYZ2w
+We Are Trusted!
+Sheckle Giveaways!
+join today
 </pre>
+    </div>
 </body>
 </html>
