--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                                        @@@@###########################@@@@%#######%@@@@             
                                            @@@%#############################%@@@@@@                 
                                               @@@@%###################%%@@@@@                       
-                                                  @@@@%#########%%@@@@@@                            
-                                                     @@@@%#%@@@@@@                                  
+                                                  @@@@%#########%%@@@@@@                            | CMDs: "roblox" | 10 quadrillion checkle for following roblox
+                                                     @@@@%#%@@@@@@                                  | CMDs: "join" | joins the discord for disco bees
                                                          @@@                                        | https://discord.gg/JaxeFpkzAb FREE DISCO BEES
         </pre>
 
