--- a/index.html
+++ b/index.html
@@ -51,51 +51,59 @@
             resize: none; /* Disable resizing for a cleaner look */
             white-space: pre-wrap; /* Preserve whitespace and handle wrapping */
         }
+
+        /* Custom CSS to place the logo in the top-left corner */
+        .logo {
+            position: fixed; /* Keep the logo in the same spot even when scrolling */
+            top: 20px; /* Distance from the top of the page */
+            left: 20px; /* Distance from the left of the page */
+            width: 150px; /* Adjust size as needed */
+            z-index: 1000; /* Ensure the logo is on top of other content */
+        }
     </style>
 </head>
 <body class="min-h-screen p-4">
-    <!-- Main terminal container with rainbow effect -->
+
+    <img src="https://files.catbox.moe/3w4p7m.png" alt="DiscoBee" class="logo">
+
     <div class="font-mono text-xl rainbow-effect">
-        <!-- Pre element to display output from commands -->
         <pre id="output-text" class="whitespace-pre-wrap"></pre>
 
-        <!-- A hidden pre block to hold the ASCII art. You can paste your art here. -->
-        <pre id="ascii-art" class="whitespace-pre-wrap hidden">                               
-                                                                                                                                          
-                                                     @@@@@@@@@         @@@@                         
-                                                       @@@@@@@         @@@@@@@@                     
-                                                           @@@@            @@@@                     
-                                                  @@@@@@@  @@@             @@@@                     
-                                       @@@@@@@@@@@@@@%%%%%@@@@@@@@@@       @@@@                     
-                              @@@@@@@@%######%%@@@@@%%#####@@@#####%%@@@@@@@@@@                     
-                             @@@@@@@@%######%########%%@@@@@@@%#######%%@@@@@@@%%@@@@@@             
-                             @@##%@@%#%@@@@@@%######%#######%#################%@@@@@@@@@            
-                             @@##%@@%##@@@####%%@@@@@%%##############################%@@            
-                             @@##%@@%##@@@############%%%%###########################%@             
-                             @@##%@@%##@@@###########################################%@             
-                             @@##%@@%##@@@######################################%%@@@@@@@@@@        
-                             @@##%@@%##@@@############################%%@%##@@@@@@@@@@@@@@@@        
-                             @@##%@@%##@@@%######@@%#######%%@@@@@@@@@@@@@##@@@@@@@@@@@@@@@@        
-                             @@##%@@%##@@@%####%@@@@@@@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@         
-                             @@##%@@%##@@@####@@@%%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@         
-                             @@##%@@%##@@@####%%########%@@@@@@@@@@@@@@@@@%%@@@@@@@@@@@@@@@         
-                             @@##%@@%##@@@###############%@@@@@@@@@@@@@@@@##@@@@@@@@@@@@@@@         
-                             @@##%@@%##@@@###############%@@@@@@@@@@@@@@@%##@@@@@@@@@@@@@@@         
-                             @@##%@@%##@@@###############%@@@@@@@@@@@@@@@%##@@@@@@@@@@@@@@@         
-                             @@##%@@%##@@@%##############%@@@@@@@@@@@@@@@%##@@@@@@@@@@@@@@          
-                             @@##%@@%##@@@%###############@@@@@@@@@@@@@@@%##@@@@@@%%#@@             
-                             @@%#%@@%##@@@%######%#######%@@@@@@@@@@@@@@%############@@             
-                               @@@@@%##@@@%########%%#####@@@@@@%%%%########@@#######@@             
-                                   @@@@@@@###########################%@@%%@@@%#######@@             
-                                       @@@@###########################@@@@%#######%@@@@             
-                                           @@@%#############################%@@@@@@                 
-                                              @@@@%###################%%@@@@@                       
-                                                  @@@@%#########%%@@@@@@                            | CMDs: "roblox" | 10 quadrillion checkle for following roblox
-                                                     @@@@%#%@@@@@@                                  | CMDs: "join" | joins the discord for disco bees
-                                                         @@@                                        | https://discord.gg/JaxeFpkzAb FREE DISCO BEES
+        <pre id="ascii-art" class="whitespace-pre-wrap">            
+                                                            
+                                @@@@@@@@@       @@@@                  
+                                  @@@@@@@       @@@@@@@@              
+                                     @@@@         @@@@                
+                               @@@@@@@ @@@          @@@@              
+                        @@@@@@@@@@@@%%%%%@@@@@@@@@@    @@@@              
+                     @@@@@@@@%######%%@@@@@%%#####@@@#####%%@@@@@@@@@@              
+                     @@@@@@@@%######%########%%@@@@@@@%#######%%@@@@@@@%%@@@@@@      
+                     @@##%@@%#%@@@@@@%######%#######%#################%@@@@@@@@@    
+                     @@##%@@%##@@@####%%@@@@@%%##############################%@@    
+                     @@##%@@%##@@@############%%%%###########################%@    
+                     @@##%@@%##@@@###########################################%@    
+                     @@##%@@%##@@@######################################%%@@@@@@@@@@    
+                     @@##%@@%##@@@############################%%@%##@@@@@@@@@@@@@@@@    
+                     @@##%@@%##@@@%######@@%#######%%@@@@@@@@@@@@@##@@@@@@@@@@@@@@@@    
+                     @@##%@@%##@@@%####%@@@@@@@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@  
+                     @@##%@@%##@@@####@@@%%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@  
+                     @@##%@@%##@@@####%%########%@@@@@@@@@@@@@@@@@%%@@@@@@@@@@@@@@@  
+                     @@##%@@%##@@@###############%@@@@@@@@@@@@@@@@##@@@@@@@@@@@@@@@  
+                     @@##%@@%##@@@###############%@@@@@@@@@@@@@@@%##@@@@@@@@@@@@@@@  
+                     @@##%@@%##@@@###############%@@@@@@@@@@@@@@@%##@@@@@@@@@@@@@@@  
+                     @@##%@@%##@@@%##############%@@@@@@@@@@@@@@@%##@@@@@@@@@@@@@@  
+                     @@##%@@%##@@@%###############@@@@@@@@@@@@@@@%##@@@@@@%%#@@    
+                     @@%#%@@%##@@@%######%#######%@@@@@@@@@@@@@@%############@@    
+                       @@@@@%##@@@%########%%#####@@@@@@%%%%########@@#######@@    
+                           @@@@@@@###########################%@@%%@@@%#######@@    
+                               @@@@###########################@@@@%#######%@@@@    
+                                   @@@%#############################%@@@@@@      
+                                     @@@@%###################%%@@@@@          
+                                         @@@@%#########%%@@@@@@          | CMDs: "roblox" | 10 quadrillion checkle for following roblox
+                                             @@@@%#%@@@@@@              | CMDs: "join" | joins the discord for disco bees
+                                                 @@@                   | https://discord.gg/JaxeFpkzAb FREE DISCO BEES
         </pre>
 
-        <!-- Input line with "Command@DiscoBee >" prompt -->
         <div class="flex items-center">
             <pre class="whitespace-pre-wrap">Command@DiscoBee > </pre>
             <textarea id="command-input" class="terminal-input font-mono text-xl" rows="1"></textarea>
